--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -4,6 +4,18 @@
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
          version="4.0">
 
+    <!-- 配置登录过滤器 -->
+<!--
+    <filter>
+        <filter-name>login</filter-name>
+        <filter-class>com.cn.ruochen.dormitory.filter.LoginFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>login</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+-->
+
     <servlet>
         <servlet-name>RegisterServlet</servlet-name>
         <servlet-class>com.cn.ruochen.dormitory.servlet.RegisterServlet</servlet-class>
